@@ -40,6 +40,7 @@ Gameplay:
  * Fix hog floating when switching to moving hog
  * Fix jump key not being ignored after placing girder or target
  * Explode hog instantly when taking damage while dying
+ * Fix buggy hog when hog took damage during "idle" phase in kamikaze attack
 
 Styles and schemes:
  + The Specialists: Unlock game scheme
